k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: My-app-BE-FE
  namespace: my-namespace
